--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
         snake.move();
         snake.eat(food);
         snake.enemyHit(enemy);
-        snake.enemyHit(enemy2);
-        snake.enemyHit(enemy3);
+     /*   snake.enemyHit(enemy2);
+        snake.enemyHit(enemy3);*/
         snake.drawImg(paper);
         snake.checkWall(paper);
     }
-
+//tải lại trang
     function refreshPage() {
         window.location.reload();
     }
